--- a/src/components/stories/stories.css
+++ b/src/components/stories/stories.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=stories.css.map */
+a {
+  text-decoration: none !important;
+}
+
+a:hover {
+  text-decoration: underline !important;
+}
+
+.router-link {
+  color: inherit;
+}
+/*# sourceMappingURL=stories.css.map */
